Issue 29. Prevent images to overflow it's container.
Super large/wide images needs to be controlled so they do not overflow
the page grid.

--- a/themes/elmcip/css/fields.css
+++ b/themes/elmcip/css/fields.css
@@ -23,6 +23,11 @@
 .field-type-image {
 }
 
+.field img {
+  max-width: 100%;
+  height: auto;
+}
+
 .field-type-file {
 }
 
